[package]
name = "valence-creator"
version = "0.1.0"
edition = "2021"
description = "A Valence plugin to simplify the creation of servers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
valence = { git = "https://github.com/valence-rs/valence" }